fix: update unimplemented methods (#336)